--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zorahealth-landingpage",
+  "name": "zorahealth-lp",
   "version": "0.1.0",
   "description": "zora health landing page",
   "author": {
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
