feat: up version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zorahealth-lp",
-  "version": "0.1.0",
-  "description": "zora health landing page",
+  "version": "1.0.0",
+  "description": "zora health - landing page",
   "author": {
     "name": "Deardo D. Sinaga",
     "email": "simadanaga@gmail.com"
